--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 homepage: https://www.cloudonlanapps.com
 
 environment:
-  sdk: ^3.6.0
-  flutter: ">=3.3.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   crypto: ^3.0.6
