--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,18 @@ environment:
 
 dependencies:
   crypto: ^3.0.6
+  exif: ^3.3.0
   flutter:
     sdk: flutter
+  flutter_video_info: ^1.3.3
   heif_converter: ^1.0.1
   http: ^1.3.0
   http_parser: ^4.1.2
   image: ^4.5.4
+  mime: ^2.0.0
   path: ^1.9.0
   plugin_platform_interface: ^2.0.2
+  video_compress: ^3.1.4
 
 dev_dependencies:
   flutter_test:
