--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,6 +6,8 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  cl_basic_types:
+    path: ../../cl_basic_types
   flutter:
     sdk: flutter
   file_picker: ^10.0.0
