--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ migrate_working_dir/
 .flutter-plugins
 .flutter-plugins-dependencies
 build/
+**/generated_plugin**
+**/ephemeral/.plugin_symlinks/**
